# math

./: .gitignore  CMakeLists.txt  README.md  client.cpp  client.hpp  javaUtils.cpp  javaUtils.hpp  library.cpp  logging.cpp  logging.hpp  miniz.c  miniz.h  server.cpp  server.hpp  xutils.cpp  xutils.hpp
DerivedData/ModuleCache.noindex/: Session.modulevalidation
DerivedData/SymbolCache.noindex/MacOSX14.0.sdk (23A334)/: Info.plist
DerivedData/math/: info.plist
DerivedData/math/Index.noindex/: build-description.json
DerivedData/math/Logs/Notices/: 02703D18-E72D-4E35-A4F8-8B716D441B0A.xcactivitylog  045A458D-903C-4DBA-B805-98539907CC34.xcactivitylog  048DC2B1-C973-42F8-8CFB-E386C1C15913.xcactivitylog  04B306D2-5BC4-4ED1-ADE4-704BDB8E1BDE.xcactivitylog  07381270-4239-459D-9CAB-F42815A66E2B.xcactivitylog  07F77168-0A77-47B7-B00C-4186471D82A6.xcactivitylog  088B31C3-B683-45F4-A1DB-823C2752510A.xcactivitylog  08A1A63E-AB7D-4C13-9712-9033C4747AA4.xcactivitylog  096CE825-3940-4F7B-A357-48F9E9F592BF.xcactivitylog  (+289 more)
DerivedData/math/SymbolCache/: metadata.plist  project.plist
DerivedData/math/TextIndex/: TextFragmentIndex-v8.idx
gui/: hook.cpp  hook.h
java/: asmjar.cpp  asmjar.h  betterkeystrokes.cpp  jasperfinder.cpp  jasperfinder.h  libjar.cpp  libjar.h
mappings/: initialize.cpp  initialize.hpp  javaclass.cpp  javaclass.hpp  javaobject.cpp  javaobject.hpp  javaobjectimpl.cpp  javaobjectimpl.hpp
math.xcodeproj/: project.pbxproj
minecraft/: minecraft.cpp  minecraft.hpp  player.cpp  player.hpp
patcher/: patcher.cpp  patcher.h
util/: image.cpp  image.hpp
(+1745 files in other folders)
